made some changes to make the board show up on the screen. TODO: fix screen size and make the game smoother (snake isn't showing up atm.)
Screen is too big (look at the full button on the bottom.  Screen is about 2x too big.)

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -180,11 +180,11 @@ swipe-card.pop-in {
   float: left;
 }
 
-.row {
+board-layout .row {
   height: 26px;
 }
 
-.column {
+board-layout .column {
   border: 1px solid white;
   width: 24px;
   height: 24px;
